--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html{
 	display: inline-block;
-	background: url('bg.jpg') no-repeat;
+	background: url('Bg.jpg') no-repeat;
 	background-size: 100% 100%;
 	height: 100%;
 }
