--- a/Pink/src/scss/style.scss
+++ b/Pink/src/scss/style.scss
@@ -24,6 +24,7 @@ html{
 body{
   font-family: $PT, Open Sans, Sans-serif;
   min-width: 320px;
+  max-width: 1200px;
   display: block;
   margin: 0 auto;
 }
